[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encryptions"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
caesar = "caesar_cipher.main:app"
ma_sub = "ma_sub_cipher.main:app"
vigenere = "vigenere_cipher.main:app"

[tool.setuptools.packages.find]
include = ["caesar_cipher*", "ma_sub_cipher*", "vigenere_cipher*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pytest>=8.4.0",
]
